--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,8 +1,17 @@
 //Colors
-
+$main-color: #0AD9C6;
+$white: #FFFFFF;
+$black: #000000;
+$black2: #1F1F1F;
+$black3: #070707;
+$placeholder: #1C1C1C;
+$img: #101010;
+$grey: #48494D;
+$mobile-nav: #F6F6F6;
+$border: #C9CCD4;
 
 //Viewports
 
-$desktop-width: 1023px;
+$desktop-width: 1024px;
 $tablet-width: 767px;
 $mobile-width: 320px;
