--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,6 +3,7 @@
 @import "global/fonts.scss";
 @import "global/global.scss";
 @import "global/mixins.scss";
+@import "global/normalize.scss";
 @import "global/variables.scss";
 
 //Blocks
@@ -10,6 +11,8 @@
 @import "blocks/about.scss";
 @import "blocks/bicycles.scss";
 @import "blocks/body.scss";
+@import "blocks/container.scss";
 @import "blocks/footer.scss";
 @import "blocks/header.scss";
+@import "blocks/nav.scss";
 @import "blocks/video.scss";
