--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,8 +11,11 @@
 @import "blocks/about.scss";
 @import "blocks/bicycles.scss";
 @import "blocks/body.scss";
+@import "blocks/contacts.scss";
 @import "blocks/container.scss";
 @import "blocks/footer.scss";
 @import "blocks/header.scss";
+@import "blocks/map.scss";
 @import "blocks/nav.scss";
+@import "blocks/title.scss";
 @import "blocks/video.scss";
