Верстка блока about

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -98,7 +98,7 @@
     background: url('../img/headerBike-mobile.jpg') no-repeat center top;
 
     @media (min-resolution: 2dppx) {
-      background: url('../../img/headerBike-mobile@2x.jpg') no-repeat center top;
+      background: url('../img/headerBike-mobile@2x.jpg') no-repeat center top;
     }
 
     padding-top: 93px;
