--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -30,8 +30,10 @@
   top: 0;
   z-index: 5;
 
-  @media (max-width: $desktop-width) {
-    display: block;
+  &--working {
+    @media (max-width: $desktop-width) {
+      display: block;
+    }
   }
 
   &--open {
