--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -7,6 +7,7 @@ $black3: #070707;
 $placeholder: #1C1C1C;
 $img: #101010;
 $grey: #48494D;
+$video: #131314;
 $mobile-nav: #F6F6F6;
 $border: #C9CCD4;
 
