--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,29 +1,37 @@
 .about {
   margin-top: 150px;
 
-  & h2 {
-    @include text(30px, 30px, $black2, 600);
-    margin-bottom: 50px;
-
-    @media (max-width: $desktop-width) {
-      font-size: 24px;
-      line-height: 41px;
-      margin-bottom: 30px;
-    }
+  @media (max-width: $desktop-width) {
+    margin-top: 69px;
   }
+}
 
-  & span {
-    @include text(28px, 38px, $main-color, 700);
+.about h2 {
+  @include text(30px, 30px, $black2, 600);
+  margin-bottom: 50px;
+
+  @media (max-width: $desktop-width) {
+    font-size: 24px;
+    line-height: 41px;
+    margin-bottom: 30px;
   }
+}
 
-  & p {
-    margin-top: 15px;
-    @include text(22px, 34px, $black, 400);
+.about span {
+  @include text(28px, 38px, $main-color, 700);
+  letter-spacing: -0.5px;
+}
 
-    @media (max-width: $tablet-width) {
-      font-size: 18px;
-      line-height: 34px;
-    }
+.about p {
+  margin-top: 15px;
+  @include text(22px, 34px, $black, 400);
+  letter-spacing: -0.5px;
+
+  @media (max-width: $tablet-width) {
+    font-size: 18px;
+    line-height: 34px;
+    margin-top: 9px;
+    margin-bottom: 10px;
   }
 }
 
@@ -37,13 +45,13 @@
   @media (max-width: $desktop-width) {
     justify-content: space-between;
     padding: 0 106px;
-    row-gap: 40px;
+    row-gap: 20px;
     column-gap: 30px;
   }
 
   @media (max-width: $tablet-width) {
     padding: 0 28px 0 29px;
-    gap: 0;
+    row-gap: 35px;
   }
 }
 
