--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -6,6 +6,7 @@ $black2: #1F1F1F;
 $black3: #070707;
 $placeholder: #1C1C1C;
 $img: #101010;
+$bicycles: #F6F7F9;
 $grey: #48494D;
 $video: #131314;
 $mobile-nav: #F6F6F6;
