--- a/source/sass/blocks/bicycles.scss
+++ b/source/sass/blocks/bicycles.scss
@@ -3,7 +3,7 @@
   background: $bicycles;
   opacity: .99;
   margin-top: 130px;
-  padding: 130px 0 127px 0;
+  padding: 125px 0 127px 0;
 
   @media (max-width: $desktop-width) {
     margin-top: 49px;
@@ -11,7 +11,8 @@
   }
 
   @media (max-width: $tablet-width) {
-    padding: 71px 0 14px 0;
+    padding: 30px 0 14px;
+    margin-top: 73px;
   }
 }
 
