--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -28,7 +28,6 @@
 .map iframe {
   width: 957px;
   height: 530px;
-  margin-bottom: 39px;
   background: url('../img/map.jpg') no-repeat center;
   background-size: cover;
 
@@ -39,7 +38,7 @@
 
   @media (max-width: $desktop-width) {
     width: 91%;
-    margin: 0 auto 20px auto;
+    margin: 0 auto;
     height: 545px;
   }
 
@@ -47,7 +46,6 @@
     width: 100%;
     height: 250px;
     margin: 0;
-    margin-bottom: 25px;
   }
 }
 
