--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -218,6 +218,7 @@
     margin: 0;
   }
 
+
   @media (max-width: $desktop-width) {
     padding: 12px 0 12px 20px;
   }
@@ -229,6 +230,10 @@
       margin-bottom: 19px;
     }
   }
+
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 .header__form-wrapper button {
