--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -1,8 +1,8 @@
 .map {
-  margin-top: 248px;
+  margin-top: 98px;
 
   @media (max-width: $desktop-width) {
-    margin-top: 156px;
+    margin-top: 0;
   }
 
   @media (max-width: $tablet-width) {
