--- a/source/sass/blocks/body.scss
+++ b/source/sass/blocks/body.scss
@@ -1,8 +1,17 @@
 .body {
   font-family: "Open Sans", "Arial", sans-serif;
+  display: flex;
+  flex-direction: column;
   margin: 0;
   width: 100%;
   min-height: 100%;
   text-align: center;
   background-color: $white;
+  //overflow-x: hidden;
+}
+
+.body--menu-open {
+  width:100vw;
+  height:100vh;
+  overflow:hidden;
 }
