--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -18,9 +18,10 @@
   flex-wrap: wrap;
   justify-content: center;
   column-gap: 90px;
+  padding: 0;
 
   @media (max-width: $desktop-width) {
-    padding-right: 11px;
+    padding-left: 9px;
   }
 
   @media (max-width: $tablet-width) {
@@ -45,6 +46,15 @@
   align-items: center;
   position: relative;
   @include text(16px, 32px, rgba($black, 0.5), 400);
+
+  &:hover,
+  &:focus {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.5;
+  }
 
   @media (max-width: $tablet-width) {
     text-align: center;
