--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -10,10 +10,9 @@
   @include ul();
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   position: relative;
   padding: 21px 24px 10px 21px;
-  align-items: flex-end;
+  column-gap: 16.1%;;
 
   &::after {
     @media (max-width: $desktop-width) {
@@ -48,13 +47,12 @@
     display: block;
     position: absolute;
     z-index: 2;
+    height: 100%;
+    overflow-y: scroll;
   }
 }
 
 .nav__item {
-  &:last-child {
-    margin-bottom: 0;
-  }
 
   @media (max-width: $desktop-width) {
     text-align: left;
