--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -9,11 +9,12 @@
   @media (max-width: $desktop-width) {
     padding-top: 50px;
     padding-bottom: 202px;
+    margin-bottom: 136px;
   }
 
   @media (max-width: $tablet-width) {
     padding: 62px 15px 132px;;
-    margin-bottom: 119px;
+    margin-bottom: 105px;
   }
 }
 
@@ -54,6 +55,7 @@
   background: transparent;
   border: 0;
   padding: 0;
+  cursor: pointer;
 
   @media (max-width: $desktop-width) {
     width: 90px;
