--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,7 +13,9 @@
 @import "blocks/body.scss";
 @import "blocks/contacts.scss";
 @import "blocks/container.scss";
+@import "blocks/footer.scss";
 @import "blocks/header.scss";
+@import "blocks/main.scss";
 @import "blocks/map.scss";
 @import "blocks/nav.scss";
 @import "blocks/video.scss";
