--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,16 +1,16 @@
 //Colors
-$main-color: #0AD9C6;
-$white: #FFFFFF;
+$main-color: #0ad9c6;
+$white: #ffffff;
 $black: #000000;
-$black2: #1F1F1F;
+$black2: #1f1f1f;
 $black3: #070707;
-$placeholder: #1C1C1C;
+$placeholder: #1c1c1c;
 $img: #101010;
-$bicycles: #F6F7F9;
-$grey: #48494D;
+$bicycles: #f6f7f9;
+$grey: #48494d;
 $video: #131314;
-$mobile-nav: #F6F6F6;
-$border: #C9CCD4;
+$mobile-nav: #f6f6f6;
+$border: #c9ccd4;
 
 //Viewports
 
