--- a/source/sass/blocks/bicycles.scss
+++ b/source/sass/blocks/bicycles.scss
@@ -1,7 +1,7 @@
 .bicycles {
   min-width: $mobile-width;
   background: $bicycles;
-  opacity: .99;
+  opacity: 0.99;
   margin-top: 130px;
   padding: 125px 0 127px 0;
 
@@ -54,15 +54,15 @@
     row-gap: 29px;
   }
 
-  @media(min-width: $tablet-desktop) {
+  @media (min-width: $tablet-desktop) {
     column-gap: 20px;
   }
 
-  @media(min-width: $desktop-width) {
+  @media (min-width: $desktop-width) {
     column-gap: 3.6%;
   }
 
-  @media(max-width: $tablet-width) {
+  @media (max-width: $tablet-width) {
     padding: 0 25px;
     gap: 20px;
   }
@@ -80,7 +80,7 @@
 .bicycles__item--road {
   padding-top: 10px;
 
-  @media(max-width: $desktop-width) {
+  @media (max-width: $desktop-width) {
     padding: 0;
   }
 
@@ -94,7 +94,7 @@
     bottom: 335px;
     z-index: -1;
 
-    @media(max-width: $desktop-width) {
+    @media (max-width: $desktop-width) {
       border-width: 18px;
       width: 127px;
       height: 127px;
@@ -102,7 +102,7 @@
       bottom: 47px;
     }
 
-    @media(max-width: $tablet-width) {
+    @media (max-width: $tablet-width) {
       left: -25px;
     }
   }
@@ -129,7 +129,7 @@
     right: -23px;
   }
 
-  @media(max-width: $desktop-width) {
+  @media (max-width: $desktop-width) {
     padding: 0;
 
     &::before,
@@ -139,29 +139,26 @@
   }
 }
 
-.bicycles__item--сhildren {
+.bicycles__item--сhildren::after {
+  @include pseudo();
+  border: 17px solid $main-color;
+  border-radius: 50%;
+  width: 95px;
+  height: 95px;
+  top: -32px;
+  right: -36px;
 
-  &::after {
-    @include pseudo();
-    border: 17px solid $main-color;
-    border-radius: 50%;
-    width: 95px;
-    height: 95px;
-    top: -32px;
-    right: -36px;
+  @media (max-width: $desktop-width) {
+    border-width: 13px;
+    width: 68px;
+    height: 68px;
+    top: -20px;
+    right: -24px;
+  }
 
-    @media (max-width: $desktop-width) {
-      border-width: 13px;
-      width: 68px;
-      height: 68px;
-      top: -20px;
-      right: -24px;
-    }
-
-    @media (max-width: $tablet-width) {
-      top: -19px;
-      right: -15px;
-    }
+  @media (max-width: $tablet-width) {
+    top: -19px;
+    right: -15px;
   }
 }
 
